--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public/",
-    "build": "webpack --watch", 
+    "build": "webpack --watch",
     "build-babel": "babel src/app.js --out-file=public/scripts/app.js --presets=env,react --watch"
   },
   "dependencies": {
@@ -14,9 +14,11 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "live-server": "^1.2.0",
-    "webpack": "^4.17.1"
-  },
-  "devDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "validator": "^10.7.0",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0"
-  }
+  },
+  "devDependencies": {}
 }
