--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "live-server": "^1.2.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-modal": "^2.2.2",
     "validator": "^10.7.0",
     "webpack": "^4.17.2",
     "webpack-cli": "^3.1.0",
