--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev-server": "0.0.2",
     "live-server": "^1.2.0",
     "node-sass": "^4.5.3",
+    "normalize-css": "^2.3.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-modal": "^2.2.2",
